; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/test/extr_fake_fdw.c_FakeGetForeignPlan.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/test/extr_fake_fdw.c_FakeGetForeignPlan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@NIL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, %struct.TYPE_3__*, i32, i32*, i32*, i32*, i32*)* @FakeGetForeignPlan to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @FakeGetForeignPlan(i32* %0, %struct.TYPE_3__* %1, i32 %2, i32* %3, i32* %4, i32* %5, i32* %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_3__*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  store i32* %6, i32** %14, align 8
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  store i32 %18, i32* %15, align 4
  %19 = load i32*, i32** %13, align 8
  %20 = call i32* @extract_actual_clauses(i32* %19, i32 0)
  store i32* %20, i32** %13, align 8
  %21 = load i32*, i32** %12, align 8
  %22 = load i32*, i32** %13, align 8
  %23 = load i32, i32* %15, align 4
  %24 = load i32, i32* @NIL, align 4
  %25 = load i32, i32* @NIL, align 4
  %26 = load i32, i32* @NIL, align 4
  %27 = load i32, i32* @NIL, align 4
  %28 = load i32*, i32** %14, align 8
  %29 = call i32* @make_foreignscan(i32* %21, i32* %22, i32 %23, i32 %24, i32 %25, i32 %26, i32 %27, i32* %28)
  ret i32* %29
}

declare dso_local i32* @extract_actual_clauses(i32*, i32) #1

declare dso_local i32* @make_foreignscan(i32*, i32*, i32, i32, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
